tests/miz/pass/types/pass_type_elaboration_reserved_variable_inequality_001.miz
reserve x for set;
theorem ReservedVariableInequalityPayloadBoundary: x <> x;
