tests/miz/fail/types/fail_type_elaboration_builtin_inequality_formula_gap_001.miz
theorem BuiltinInequalityPayloadBoundary: 1 <> 2;
